src/main/antlr/Conditional.g4
grammar Conditional;


parse
 : block EOF
 ;

block
 : stat*
 ;

stat
 : if_stat
 | OTHER {System.err.println("unknown char: " + $OTHER.text);}
 ;



if_stat
 : IF '(' condition_block ')' action_block  end_block
 ;

condition_block
 : expr stat_block
 ;

stat_block
 :  block
 | stat
 ;

action_block: THEN (expr | action_expr);
end_block: SCOL;

action_expr
: CLASS CLASS_SEP expr;

expr
 : expr POW<assoc=right> expr           #powExpr
 | MINUS expr                           #unaryMinusExpr
 | NOT expr                             #notExpr
 | expr op=(MULT | DIV | MOD) expr      #multiplicationExpr
 | expr op=(PLUS | MINUS) expr          #additiveExpr
 | expr op=(LTEQ | GTEQ | LT | GT) expr #relationalExpr
 | expr op=(EQ | NEQ) expr              #equalityExpr
 | expr AND expr                        #andExpr
 | expr OR expr                         #orExpr
 | atom                                 #atomExpr
 ;

atom
 : OPAR expr CPAR #parExpr
 | (INT | FLOAT)  #numberAtom
 | (TRUE | FALSE) #booleanAtom
 | ID             #idAtom
 | STRING         #stringAtom
 | NIL            #nilAtom
 ;

OR : '||';
AND : '&&';
EQ : '==';
NEQ : '!=';
GT : '>';
LT : '<';
GTEQ : '>=';
LTEQ : '<=';
PLUS : '+';
MINUS : '-';
MULT : '*';
DIV : '/';
MOD : '%';
POW : '^';
NOT : '!';

SCOL : ';';
ASSIGN : '=';
OPAR : '(';
CPAR : ')';

CLASS: 'class';
CLASS_SEP: ':';


TRUE : 'true';
FALSE : 'false';
NIL : 'nil';
IF : 'if' | 'IF';
THEN: 'then' | 'THEN';
ELSE : 'else';
LOG : 'log';

ID
 : [a-zA-Z_] [a-zA-Z_0-9]*
 ;

INT
 : [0-9]+
 ;

FLOAT
 : [0-9]+ '.' [0-9]*
 | '.' [0-9]+
 ;

STRING
 : '"' (~["\r\n] | '""')* '"'
 ;

COMMENT
 : '#' ~[\r\n]* -> skip
 ;

 SPACE
  : [ \t\r\n] -> skip
  ;

 OTHER
  : .
  ;
